<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <Button
        android:id="@+id/btn_mvc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Open MVC" />

    <Button
        android:id="@+id/btn_mvp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Open MVP" />

    <Button
        android:id="@+id/btn_mvvm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Open MVVM" />

    <Button
        android:id="@+id/btn_mvi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Open MVI" />
    <Button
        android:id="@+id/btn_ca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Open Clean Architecture" />
</LinearLayout>
